# automate-social-media-posts

./: CHANGELOG.md  Cargo.toml  README.md
.github/: copilot-instructions.md  release-drafter.yml
.github/workflows/: release-drafter.yml
src/: lib.rs  main.rs
src/config/: mod.rs
src/content/: mod.rs
src/video/: generator.rs  mod.rs  validation.rs
