[package]
name = "automate-social-media-posts"
version = "0.1.0"
edition = "2021"

[dependencies]
ffmpeg-next = "7.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"
reqwest = { version = "0.12", features = ["json", "multipart"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
toml = "0.8"
imageproc = "0.26"
image = "0.25"
rusttype = "0.9"

[dev-dependencies]
tempfile = "3.8"
